ajout de la couche mvc

--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
+	<finalName>amsmvc2025</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
